--- a/obstacle_segmentation/cmake-build-debug-/CTestConfiguration.ini
+++ b/obstacle_segmentation/cmake-build-debug-/CTestConfiguration.ini
@@ -4,14 +4,14 @@
 
 
 # Configuration directories and files
-SourceDirectory: /home/elsa/licang_ws/src/licang/obstacle_segmentation_tc/obstacle_segmentation
-BuildDirectory: /home/elsa/licang_ws/src/licang/obstacle_segmentation_tc/obstacle_segmentation/cmake-build-debug-
+SourceDirectory: /home/sentry111/licang_ws/src/licang/obstacle_segmentation_tc/obstacle_segmentation
+BuildDirectory: /home/sentry111/licang_ws/src/licang/obstacle_segmentation_tc/obstacle_segmentation/cmake-build-debug-
 
 # Where to place the cost data store
 CostDataFile: 
 
 # Site is something like machine.domain, i.e. pragmatic.crd
-Site: elsa-Legion-Y9000P-IRX8
+Site: sentry111-THUNDEROBOT-DT-Computer
 
 # Build name is osname-revision-compiler, i.e. Linux-2.4.2-2smp-c++
 BuildName: 
@@ -26,7 +26,7 @@ SubmitURL:
 NightlyStartTime: 
 
 # Commands for the build/test/submit cycle
-ConfigureCommand: "/usr/bin/cmake" "/home/elsa/licang_ws/src/licang/obstacle_segmentation_tc/obstacle_segmentation"
+ConfigureCommand: "/usr/bin/cmake" "/home/sentry111/licang_ws/src/licang/obstacle_segmentation_tc/obstacle_segmentation"
 MakeCommand: 
 DefaultCTestConfigurationType: 
 
